added user goals to readme,added truck iconto table and made changes to schedule.js and chaged lat and lng  to map.js

--- a/index.html
+++ b/index.html
@@ -115,31 +115,31 @@
                             <td>1</td>
                             <td class="weekday">Monday</td>
                             <td>6-9pm</td>
-                            <td>Amsterdam</td>
+                            <td>Amsterdam<span class="truck hide">  <i class="fas fa-truck"></i></span></td>
                         </tr>
                         <tr class="tablerow">
                             <td>2</td>
                             <td class="weekday">Tuesday</td>
                             <td>6-9pm</td>
-                            <td>Uterecht</td>
+                            <td>Uterecht<span class="truck hide">  <i class="fas fa-truck"></i></span></td>
                         </tr>
                         <tr class="tablerow">
                             <td>3</td>
                             <td class="weekday">Wednesday</td>
                             <td>6-9pm</td>
-                            <td>Den Bosch</td>
+                            <td>Den Bosch<span class="truck hide">  <i class="fas fa-truck"></i></span></td>
                         </tr>
                         <tr class="tablerow">
                             <td>4</td>
                             <td class="weekday">Thursday</td>
                             <td>6-9pm</td>
-                            <td>Eindhoven</td>
+                            <td>Eindhoven  <span class="truck hide"><i class="fas fa-truck"></i></span></td>
                         </tr>
                         <tr class="tablerow">
                             <td>5</td>
                             <td class="weekday">Friday</td>
                             <td>6-9pm</td>
-                            <td>Mastricht</td>
+                            <td>Mastricht  <span class="truck hide"><i class="fas fa-truck"></i></span></td>
                         </tr>
                     </table>
                 </div>
