added truck icon to highlight current day for accordions in index.html and corresponding logic to display truck in schedule.js

--- a/index.html
+++ b/index.html
@@ -115,31 +115,31 @@
                         </tr>
                         <tr class="tablerow">
                             <td>1</td>
-                            <td class="weekday">Monday</td>
+                            <td>Monday</td>
                             <td>6-9pm</td>
                             <td>Amsterdam<span class="truck hide">  <i class="fas fa-truck"></i></span></td>
                         </tr>
                         <tr class="tablerow">
                             <td>2</td>
-                            <td class="weekday">Tuesday</td>
+                            <td >Tuesday</td>
                             <td>6-9pm</td>
                             <td>Uterecht<span class="truck hide">  <i class="fas fa-truck"></i></span></td>
                         </tr>
                         <tr class="tablerow">
                             <td>3</td>
-                            <td class="weekday">Wednesday</td>
+                            <td>Wednesday</td>
                             <td>6-9pm</td>
                             <td>Den Bosch<span class="truck hide">  <i class="fas fa-truck"></i></span></td>
                         </tr>
                         <tr class="tablerow">
                             <td>4</td>
-                            <td class="weekday">Thursday</td>
+                            <td>Thursday</td>
                             <td>6-9pm</td>
                             <td>Eindhoven  <span class="truck hide"><i class="fas fa-truck"></i></span></td>
                         </tr>
                         <tr class="tablerow">
                             <td>5</td>
-                            <td class="weekday">Friday</td>
+                            <td>Friday</td>
                             <td>6-9pm</td>
                             <td>Mastricht  <span class="truck hide"><i class="fas fa-truck"></i></span></td>
                         </tr>
@@ -151,10 +151,10 @@
     <div id="schedule-rtable">
             <div class="accordion" id="scheduleaccordion">
                 <div class="card">
-                    <div class="card-header" id="mon">
+                    <div class="card-header weekday" id="Monday">
                         <h2 class="mb-0">
-                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseMon" aria-expanded="true" aria-controls="collapseOne">
-                            Monday
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseMon" aria-expanded="true" aria-controls="collapseOne" name="Monday">
+                            Monday<span class="truck hide"><i class="fas fa-truck"></i></span>
                             </button>
                         </h2>
                             <div id="collapseMon" class="collapse" aria-labelledby="Day1" data-parent="#scheduleaccordion">
@@ -168,10 +168,10 @@
                 </div>
                 
                 <div class="card">
-                    <div class="card-header" id="tue">
+                    <div class="card-header weekday" id="Tuesday">
                         <h2 class="mb-0">
                             <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseTue" aria-expanded="true" aria-controls="collapseOne">
-                            Tuesday
+                            Tuesday<span class="truck hide"><i class="fas fa-truck"></i></span>
                             </button>
                         </h2>
                             <div id="collapseTue" class="collapse" aria-labelledby="headingOne" data-parent="#scheduleaccordion">
@@ -184,10 +184,10 @@
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card-header" id="wed">
+                    <div class="card-header weekday" id="Wednesday">
                         <h2 class="mb-0">
                             <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseWed" aria-expanded="true" aria-controls="collapseOne">
-                            Wednesday
+                            Wednesday<span class="truck hide"><i class="fas fa-truck"></i></span>
                             </button>
                         </h2>
                             <div id="collapseWed" class="collapse" aria-labelledby="headingOne" data-parent="#scheduleaccordion">
@@ -200,10 +200,10 @@
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card-header" id="thu">
+                    <div class="card-header weekday" id="Thursday">
                         <h2 class="mb-0">
                             <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseThu" aria-expanded="true" aria-controls="collapseOne">
-                            Thursday
+                            Thursday<span class="truck hide"><i class="fas fa-truck"></i></span>
                             </button>
                         </h2>
                             <div id="collapseThu" class="collapse" aria-labelledby="headingOne" data-parent="#scheduleaccordion">
@@ -216,10 +216,10 @@
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card-header" id="fri">
+                    <div class="card-header weekday" id="Friday">
                         <h2 class="mb-0">
                             <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseFri" aria-expanded="true" aria-controls="collapseOne">
-                            Friday
+                            Friday<span class="truck hide"><i class="fas fa-truck"></i></span>
                             </button>
                         </h2>
                             <div id="collapseFri" class="collapse" aria-labelledby="headingOne" data-parent="#scheduleaccordion">
