added styles to schedule and location and place_order and changed lat and lng and zoom to map.js

--- a/index.html
+++ b/index.html
@@ -242,18 +242,22 @@
     </div>
         </section>
         <section id="Google_map_location">
+            <div class="location-header">
+                <h2>Location</h2> 
+                <p>We station at specific location in each city. Please check for the address that we would be statoned at in each city.</p>
+            </div>
             <div class="container map-wrapper">
                         <div class="row">
-                            <div class="col-12 col-lg-6" id="map">Location</div>
-                            <div class="col-12 col-lg-6">
+                            <div class="col-12 col-lg-8" id="map">Location</div>
+                            <div class="col-12 col-lg-4">
                                 <div id="map-info">
                                     <!-- Location Amsterdam --> 
                                     <div class="card location hide" id="Amsterdam">
                                         <div class="card-info">
                                             <h4 class="card-title">Amsterdam</h4>
-                                            <p class="card-text"> 128, sliffersestraat, grasbloem 2345AG</p>   
-                                            <p class="card-text">Landmark: opp to Basis School</p>
-                                            <p class="card-text">we are at this Location on Monday from 6 to 9pm.</p>
+                                            <p class="card-text"><strong>ADDRESS</strong>: Jan van Galenstraat 4, 1051 KM Amsterdam</p>   
+                                            <p class="card-text"><strong>LANDMARK</strong>: opp to Basis School</p>
+                                            <p class="card-text bg-text">we are at this Location on Monday from 6 to 9pm.</p>
                                         </div>
                                     </div>
                                     <!-- Location Amsterdam end --> 
@@ -261,9 +265,9 @@
                                     <div class="card location hide" id="Uterecht">
                                         <div class="card-info">
                                             <h4 class="card-title">Uterecht</h4>
-                                            <p class="card-text"> 128, sliffersestraat, grasbloem 2345AG</p>   
-                                            <p class="card-text">Landmark: opp to Jumbo food market</p>
-                                            <p class="card-text">we are at this Location on Tuesday from 6 to 9pm.</p>
+                                            <p class="card-text"><strong>ADDRESS</strong>: Vredenburg, 3511 CW Utrecht</p>   
+                                            <p class="card-text"><strong>LANDMARK</strong>: opp to Jumbo food market</p>
+                                            <p class="card-text bg-text">we are at this Location on Tuesday from 6 to 9pm.</p>
                                         </div>
                                     </div>
                                     <!-- Location Uterecht end -->
@@ -271,9 +275,9 @@
                                      <div class="card location hide" id="DenBosch">
                                         <div class="card-info">
                                             <h4 class="card-title">Den Bosch</h4>
-                                            <p class="card-text"> 128, sliffersestraat, grasbloem 2345AG</p>   
-                                            <p class="card-text">Landmark: opp to Bijnkorf</p>
-                                            <p class="card-text">we are at this Location on Wednesday from 6 to 9pm.</p>
+                                            <p class="card-text"><strong>ADDRESS</strong>: Markt, 5211 GA 's-Hertogenbosch</p>   
+                                            <p class="card-text"><strong>LANDMARK</strong>: opp to Bijnkorf</p>
+                                            <p class="card-text bg-text">we are at this Location on Wednesday from 6 to 9pm.</p>
                                         </div>
                                     </div>
                                     <!-- Location Den Bosch end -->
@@ -281,9 +285,9 @@
                                    <div class="card location hide" id="Eindhoven">
                                         <div class="card-info">
                                             <h4 class="card-title">Eindhoven</h4>
-                                            <p class="card-text"> 128, sliffersestraat, grasbloem 2345AG</p>   
-                                            <p class="card-text">Landmark: opp to SGE Kinderijk</p>
-                                            <p class="card-text">we are at this Location on Thurdsday from 6 to 9pm.</p>
+                                            <p class="card-text"><strong>ADDRESS</strong>: Wilhelminaplein, 5611 JC Eindhoven</p>   
+                                            <p class="card-text"><strong>LANDMARK</strong>: opp to SGE Kinderijk</p>
+                                            <p class="card-text bg-text">we are at this Location on Thurdsday from 6 to 9pm.</p>
                                         </div>
                                     </div>
                                     <!-- Location Eindhoven end -->
@@ -291,9 +295,9 @@
                                     <div class="card location hide" id="Mastricht">
                                         <div class="card-info">
                                             <h4 class="card-title">Mastricht</h4>
-                                            <p class="card-text"> 128, sliffersestraat, grasbloem 2345AG</p>   
-                                            <p class="card-text">Landmark: opp to Bijnkorf</p>
-                                            <p class="card-text">we are at this Location on Friday from 6 to 9pm.</p>
+                                            <p class="card-text"><strong>ADDRESS</strong>: Mosae Forum 99, 6211 DW Maastricht</p>   
+                                            <p class="card-text"><strong>LANDMARK</strong>: opp to Bijnkorf</p>
+                                            <p class="card-text bg-text">we are at this Location on Friday from 6 to 9pm.</p>
                                         </div>
                                     </div>
                                     <!-- Location Maastricht end -->
@@ -303,6 +307,76 @@
                     </div>
                 
                 </section>
+                <section id="footer">
+                <div class="container-fluid footer-container">
+                    <div class="row footer-details">
+                <!-- Copyrgiht -->
+	            <div class="col-md-12 col-lg-4 col-footer">
+                    <h5 class="text-center footer-copyright">copyright 2021</h5>
+                    <h6 class="text-center"><u>Opening Hours</u><br>
+                        Mon-Fri from 6 pm to 9 pm<br>
+                        Closed on Weekends<br>
+                    </h6>
+                </div>
+
+                <!-- Reach out to us -->
+                <div class="col-md-12 col-lg-4 col-footer">
+                    <h5 class="text-center">Reach out to us</h5>
+                        <div class="footer-contact">
+                        <ul class="footer-ul text-left">
+                             <li>
+                                <span><i class="fas fa-phone"></i> :  +31 (0) 5551241357</span> 
+                            </li>
+                            <li>
+                                <span><i class="fas fa-at"></i> :   desiwagon123@gmail.com</span>
+                            </li>
+                            <li>
+                                <span><i class="fas fa-map-marker-alt"></i> :   Netherlands</span>
+                            </li>
+                        </ul>
+                        </div>
+                </div>
+
+                <!-- Social Links -->
+                <div class="col-md-12 col-lg-4 col-footer">
+                    <h5 class="text-center footer-social">Follow us</h5>
+                        <ul class="list-inline social-links text-center">
+                            <li class="list-inline-item">
+                                <a target="_blank" href="https://www.instagram.com/">
+                                    <i class="fab fa-instagram" aria-hidden="true"></i>
+                                        <span class="sr-only">Instagram</span>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a target="_blank" href="https://www.facebook.com/">
+                                    <i class="fab fa-facebook-f" aria-hidden="true"></i>
+                                        <span class="sr-only">Facebook</span>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a target="_blank" href="https://www.twitter.com/">
+                                    <i class="fab fa-twitter" aria-hidden="true"></i>
+                                        <span class="sr-only">Twitter</span>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a target="_blank" href="https://www.pinterest.com/">
+                                    <i class="fab fa-pinterest" aria-hidden="true"></i>
+                                        <span class="sr-only">Pinterest</span>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a target="_blank" href="https://www.linkedin.com/">
+                                    <i class="fab fa-linkedin" aria-hidden="true"></i>
+                                        <span class="sr-only">Linkedin</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+<!-- /.Footer -->
 <!-- jQuery script --> 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>    
