--- a/place_order.html
+++ b/place_order.html
@@ -57,10 +57,10 @@
             </nav>
         </header>
     <!--./ title and navbar--> 
- <div id="acknowledgement" class="hide">
+ <div id="acknowledgement">
      <h2> Desi Wagon has received Your order!!!</h2>
-     <h3>You can pick your orders at the chosen place on sechedule day.
-     Please refer the schedule to know your day and time of pick up.</h3>
+     <h3>You can pick your orders at the chosen place on the secheduled day.
+     Please refer to the <a href="index.html#schedule" class="ack-schedule">schedule</a> to know your day and time of pick up in your Location.</h3>
     <img src="assets/images/acknowledgement.jpg" alt=thankyoupic">
      
  </div>
@@ -101,7 +101,7 @@
                     <label for="groceryList">Grocery List</label>
                     <textarea class="form-control" id="groceryList" name="grocerylist" rows="10" placeholder="Item name - Qty" required></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-success">Submit</button>
             </form>
             </div>
         </div>
