--- a/place_order.html
+++ b/place_order.html
@@ -37,8 +37,8 @@
                     </button>
                 <div class="collapse navbar-collapse toggler-nav" id="navbarCollapse">
                     <ul class="navbar-nav ml-auto navright">
-                        <li class="navbar-item active">
-                            <a href="index.html" class="nav-item nav-link active">Home</a>
+                        <li class="navbar-item">
+                            <a href="index.html" class="nav-item nav-link">Home</a>
                         </li>
                         <li class="navbar-item">
                             <a href="index.html#schedule" class="nav-item nav-link">Schedule</a>
@@ -47,7 +47,7 @@
                             <a href="index.html#location" class="nav-item nav-link">Location</a>
                         </li>
                         
-                        <li class="navbar-item">
+                        <li class="navbar-item active">
                             <button class="btn jumbotron-btn btn-dark btn-order shadow-none" onclick="window.location.href='place_order.html';">
                             Place Order</button>
                         </li>
@@ -57,7 +57,7 @@
             </nav>
         </header>
     <!--./ title and navbar--> 
- <div id="acknowledgement">
+ <div id="acknowledgement" class="hide">
      <h2> Desi Wagon has received Your order!!!</h2>
      <h3>You can pick your orders at the chosen place on the secheduled day.
      Please refer to the <a href="index.html#schedule" class="ack-schedule">schedule</a> to know your day and time of pick up in your Location.</h3>
