--- a/place_order.html
+++ b/place_order.html
@@ -57,7 +57,7 @@
             </nav>
         </header>
     <!--./ title and navbar--> 
- <div id="acknowledgement" class="hide">
+ <div id="acknowledgement">
      <img src="assets/images/acknowledgement-img.jpg" alt="thankyoupic">
      <h2> Desi Wagon has received Your order!!!</h2>
      <h3>You can pick your orders at the chosen place on the secheduled day.
