--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
             <nav class="navbar navbar-expand-md navbar-light bg-dark ml-auto bg-navbar">
             <!-- Brand Title on top left -->
-            <div class="logo">
+            <div class="brand">
                 <a class="navbar-brand" href="index.html">
                     <h1 class="brandname">Desi Wagon</h1>
                 </a>
